--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "test",
-  "version": "1.0.0",
+  "name": "my-study-peer",
+  "version": "0.1.0",
   "private": true,
-  "description": "test",
-  "keywords": [
-    "gatsby"
-  ],
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
