--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,5 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g eslint
+    - run: npm install -g eslint eslint-config-prettier eslint-plugin-react
     - run: eslint --cache src
