--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Syntax check and format
 
 on:
   push:
@@ -12,17 +9,15 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install --save-dev eslint eslint-config-prettier eslint-plugin-react
-    - run: npx eslint --cache src
+    - uses: actions/setup-node@v2
+    - run: npm ci
+    - name: linter
+      run: npm run lint
+    - name: prettier
+      run: npm run format
+    - name: commit
+      uses: stefanzweifel/git-auto-commit-action@v4.1.2
+      
+    
