--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,5 +19,7 @@ jobs:
       run: npm run format
     - name: commit
       uses: stefanzweifel/git-auto-commit-action@v4.1.2
+      with:
+        commit_message: Applied linting and formatting.
       
     
