--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,6 +10,12 @@ jobs:
       with:
         ref: ${{ github.head_ref }}
     - uses: actions/setup-node@v2
+    - uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
     - run: npm ci
     - name: linter
       run: npm run lint
