--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "gatsby": "^3.4.1",
     "gatsby-plugin-react-helmet": "^4.5.0",
@@ -28,6 +29,7 @@
     "sass": "^1.34.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
